Bug 1511885 - Stop writing to disk every time a card is accessed. r=jorgk

--HG--
extra : rebase_source : 8cb14447af70f1d71b6ae9385301a6d9b697aacf